# src/models/user.sql.js
@@ -9,6 +9,7 @@ export const connectFoodCategory = "INSERT INTO user_favor_category (f_category_
 
 export const confirmEmail = "SELECT EXISTS(SELECT 1 FROM user WHERE email = ?) as isExistEmail";
 
+
 export const getPreferByUserID =
 "SELECT ufc.uf_category_id, ufc.f_category_id, ufc.user_id, fcl.f_category_name "
 + "FROM user_favor_category ufc JOIN food_category_list fcl on ufc.f_category_id = fcl.f_category_id "
@@ -19,3 +20,13 @@ export const challengeMissionSql = "insert into user_mission (user_id, mission_i
 export const getChallengeMissionSql = "select u_mission_id, user_id, um.mission_id, u_mission_status, mission_content, mission_deadline, mission_point, r.restaurant_name "
 +"from user_mission um join mission m on um.mission_id = m.mission_id join restaurant r on m.restaurant_id = r.restaurant_id "
 +"where u_mission_id = ?;";
+
+export const reviewCount = "select count(*) from review as reviewCount";
+
+export const getMyReviewSql =
+"select u.user_name, u.user_id, r.review_id, r.rate, r.review_content, r.created_at "
++ "from review r join user u on r.user_id = u.user_id "
++ "where r.user_id = ? and r.review_id < ? "
++ "order by created_at desc "
++ "limit ?";
+
