# swagger/user.swagger.yaml
@@ -136,3 +136,93 @@ paths:
               message:
                 type: string
                 example: 서버 에러, 관리자에게 문의 바랍니다.
+
+  /user/review:
+    get:
+      tags:
+        - User
+      summary: 자기가 작성한 리뷰 조회
+      parameters:
+      - in: body
+        required: true
+        schema:
+          properties:
+            userId:
+              type: integer
+              description: 유저아이디
+              example: 1
+      - in: query
+        schema:
+          properties:
+            reviewId:
+              type: integer
+              description: 리뷰 아이디
+              example: 1
+            size:
+              type: integer
+              description: 페이징 사이즈
+              example: 5
+      responses:
+        '200':
+          description: 리뷰 조회 성공!
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 200
+              isSuccess:
+                type: boolean
+                example: true
+              code:
+                type: integer
+                example: 2000
+              message:
+                type: string
+                example: "success!"
+              data:
+                type: object
+                example: {
+                  "reviewId": 1,
+                  "userId": 1,
+                  "userName": "user",
+                  "rate": 4.5,
+                  "context": "Review Context",
+                  "created_at": "2000-00-00"
+                }
+                
+        '400':
+          description: 잘못된 요청
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 400
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON001
+              message:
+                type: string
+                example: 잘못된 요청입니다
+
+        '500':
+          description: 서버 에러
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                example: 500
+              isSuccess:
+                type: boolean
+                example: false
+              code:
+                type: integer
+                example: COMMON000
+              message:
+                type: string
+                example: 서버 에러, 관리자에게 문의 바랍니다.
